# mobius.nvim

./: Cargo.toml  README.md  mobius.toml
lua/mobius/: detect.lua  init.lua  kitty.lua  overlay.lua
src/: config.rs  encode.rs  kitty.rs  main.rs
