[package]
name = "mobius"
version = "0.1.0"
edition = "2024"

[dependencies]
image   = { version = "0.25", features = ["png"] }   # PNG open + resize + RGBA
base64  = { version = "0.22", features = ["std"] }
clap    = { version = "4", features = ["derive"] }
toml = "0.8"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
